--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 :root {
     --white-color: #fff;
+    --black-color: black;
     --main-color: #D1884F;
     --secondary-color: #008AAA;
     --tertiary-color: #3BBADB;
@@ -29,7 +30,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: black; /* Default text color */
+    color: var(--black-color); 
     display: flex;
     align-items: center; /* Aligns the icon and text vertically */
 }
@@ -68,7 +69,7 @@ nav ul li a.active {
 }
 
 #info p {
-    color: #333; 
+    color: var(--black-color);  
     font-size: 1.2rem; 
 }
 
@@ -77,12 +78,15 @@ nav ul li a.active {
     color: var(--tertiary-color); 
 }
 
-#info .button-container {
-    margin-top: 2rem; /* Space between the paragraph and buttons */
+footer {
+    display: flex; 
+    flex-wrap: nowrap; 
+    align-items: center; 
+    margin-top: 2rem; 
     width: 100%;
 }
 
-#info .button {
+footer .button {
     background-color: var(--white-color);; 
     color: var(--secondary-color); 
     border: 2px solid var(--secondary-color); 
@@ -91,34 +95,35 @@ nav ul li a.active {
     text-decoration: none; 
     display: inline-block;
     border-radius: 5px;
+    margin-right: 10px;
 }
 
-#info .button:first-of-type {
+footer .button:first-of-type {
     background-color: var(--secondary-color); 
     color: var(--white-color);; 
     box-shadow: 0px 4px 8px rgba(76, 146, 173, 0.8); 
 }
 
-.content {
+article {
     flex: 1; 
     padding-left: 50px;
 }
 
-.profile-container {
+aside {
     flex: 1; 
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.profile-pic {
+aside .profile-pic {
     max-width: 100%; 
     height: auto;
 }
 
 /* Medium screens (tablets, small laptops) */
 @media (max-width: 1024px) {
-    .content, .profile-container {
+    article, aside {
         padding-right: 30px; 
     }
     
@@ -129,15 +134,10 @@ nav ul li a.active {
     #info p {
         font-size: 1rem; 
     }
-
-    .profile-pic {
-        width: 50%; 
-    }
 }
 
 /* Small screens (phones in portrait) */
 @media (max-width: 768px) {
-
     nav ul li a {
         font-size: 0.7rem; 
     }
@@ -148,20 +148,25 @@ nav ul li a.active {
         align-items: center; 
     }
 
-    .profile-container {
+    aside {
         order: -1; 
         width: 100%; 
         justify-content: center; 
         margin-bottom: 20px; 
     }
 
-    .profile-image {
+    aside .profile-pic {
         width: 50%; 
         margin-bottom: 20px; 
     }
 
-    .content {
-        width: 100%; 
+    article {
+        width: 100%;
+    }
+    footer .button {
+        font-size: 0.8rem; 
+        padding: 5px 20px;
+        margin-right: 5px; 
     }
 }
 
